addons/website_sale/static/src/scss/website_sale.scss
/* ... */
// ==== THE RIGHT SIDE
#products_grid {
    overflow: auto;
    container-type: inline-size;
    container-name: o-wsale-grid;
    grid-template-rows: minmax(auto, auto);

    border-left: var(--o-wsale-sidebar-border);
}

// Hide empty category description in not-edition mode
body:not(.editor_enable) #category_header {
    &:has(> br:first-child:last-child), &:empty {
        display: none;
    }
}

#o_wsale_container.o_wsale_layout_catalog {
    @mixin desktop-setup {

        // .o_wsale_products_grid_table
        // Necessary just to ensure that a product with custom height behaves
        // correctly when rendered into the last row.
        grid-auto-rows: minmax(160px, auto);

        .oe_product {
            grid-row: span var(--o-wsale-products-grid-product-col-height, 1);
        }

        .oe_product:not(.oe_product_size_stretch) {
            .o_wsale_product_btn {
                @include o-position-absolute(0, 0, auto, auto);

                z-index: 2;
            }

            &:not(:hover) .o_wsale_product_btn {
                opacity: 0;
            }
        }

        // Stretch
        .oe_product.oe_product_size_stretch {
            --o-wsale-card-border-radius: 0;
            --o-wsale-card-flex-direction: row;
            --o-wsale-card-flex-align-items: start;
            --o-wsale-card-info-padding: 0 #{map-get($spacers, 3)};
            --o-wsale-card-thumb-size: calc(
                calc(100cqw / var(--o-wsale-ppr)) - calc(var(--o-wsale-products-grid-gap) / 2)
            );
            --o-wsale-card-padding: #{0 0 $o-wsale-products-layout-grid-gutter-width};
            --o-wsale-card-attribute-previewer-padding: 0;

            .oe_subdescription div {
                -webkit-line-clamp: initial;
                line-height: inherit;
            }
        }

        &:not(.o_wsale_context_thumb_cover) .oe_product.oe_product_size_stretch {
            .oe_product_image img {
                object-position: top left;
            }
        }

        &.o_wsale_context_thumb_cover .oe_product.oe_product_size_stretch {
            --o-wsale-card-info-text-grow: 1;

            .o_wsale_product_information {
                height: 100%;
            }

            .oe_product_image, .oe_product_image_link {
                height: 100%;
                max-width: 100%;
                padding: 0;
            }
        }

        &.o_wsale_design_cards .oe_product.oe_product_size_stretch {
            --o-wsale-card-padding: 0;
            --o-wsale-card-border-radius: #{$card-border-radius};
            --o-wsale-card-info-padding: #{map-get($spacers, 3)};
        }

        &.o_wsale_design_grid .oe_product.oe_product_size_stretch {
            --o-wsale-card-padding: 0;
            --o-wsale-card-info-padding: #{map-get($spacers, 2)} #{map-get($spacers, 3)};

            &[data-colspan="4"] {
                --o-wsale-card-thumb-size: 50cqw;
            }
        }

        .oe_product.oe_product_custom_portrait {
            .oe_product_image, .oe_product_image_link {
                min-height: calc(
                    calc(90cqw / var(--o-wsale-ppr)) * var(--o-wsale-card-thumb-aspect-ratio)
                );
                height: 100%;
            }

            .oe_product_image_link {
                --o-wsale-card-thumb-fill-mode: cover;
                --o-wsale-card-thumb-aspect-ratio: auto;
            }
        }
    }

    .o_wsale_product_information {
        container-type: inline-size;
        container-name: o-wsale-grid-product-information;

        .o_wsale_products_item_title {
            font-size: unquote("clamp(0.95rem, 0.5rem + 3cqw, 1.4rem)");
        }

        .o_wsale_product_sub .product_price .h6 {
            font-size: unquote("clamp(0.95rem, 0.5rem + 3cqw, 4rem)");
        }
    }

    .o_wsale_product_btn_list {
        display: none !important;
    }

    & .oe_product:not(.oe_product_size_stretch) .o_wsale_attribute_previewer {
        @include o-position-absolute(auto, 0, 100%, auto);
    }

    .o_wsale_products_grid_table {
        @include media-breakpoint-up(lg) {
            @include desktop-setup();
        }
    }

    .o_wsale_products_grid_table_md {
        @include media-breakpoint-only(md) {
            @include desktop-setup();
        }
    }

    // Bootstrap uses a 12 columns grid system by default.
    // Tweak the grid when in need to render 5 columns.
    &[data-ppr="5"] {
        .o_wsale_products_grid_table {
            @include media-breakpoint-up(lg) {
                --columns: 10;
            }
        }

        .o_wsale_products_grid_table_md {
            @include media-breakpoint-only(md) {
                --columns: 10;
            }
        }
    }
}
/* ... */

